--- a/generic.html
+++ b/generic.html
@@ -43,17 +43,13 @@
 					<!-- Featured Post -->
 						<article class="post featured">
 							<header class="major">
-								<span class="date">...</span>
-								<h2><a href="#">This is what<br />
-								I've been working on</a></h2>
+								<span class="date">✩✩✩</span>
+								<h2><a href="#">What I've been<br />
+								working on</a></h2>
 								<p>Research. Computation. Social Justice. Machine Learning. Statistics. Public Health.</p>
 							</header>
 							<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-							<ul class="actions special">
-								<li><a href="#" class="button large">Full Story</a></li>
-							</ul>
 						</article>
-
 					<!-- Posts -->
 						<section class="posts">
 							<article>
@@ -133,76 +129,10 @@
 								</ul>
 							</article>
 						</section>
-
-					<!-- Footer -->
-						<footer>
-							<div class="pagination">
-								<!--<a href="#" class="previous">Prev</a>-->
-								<a href="#" class="page active">1</a>
-								<a href="#" class="page">2</a>
-								<a href="#" class="page">3</a>
-								<span class="extra">&hellip;</span>
-								<a href="#" class="page">8</a>
-								<a href="#" class="page">9</a>
-								<a href="#" class="page">10</a>
-								<a href="#" class="next">Next</a>
-							</div>
-						</footer>
-
 				</div>
-
-			<!-- Footer -->
-				<footer id="footer">
-					<section>
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" />
-								</div>
-								<div class="field">
-									<label for="email">Email</label>
-									<input type="text" name="email" id="email" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="3"></textarea>
-								</div>
-							</div>
-							<ul class="actions">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</form>
-					</section>
-					<section class="split contact">
-						<section class="alt">
-							<h3>Address</h3>
-							<p>1234 Somewhere Road #87257<br />
-							Nashville, TN 00000-0000</p>
-						</section>
-						<section>
-							<h3>Phone</h3>
-							<p><a href="#">(000) 000-0000</a></p>
-						</section>
-						<section>
-							<h3>Email</h3>
-							<p><a href="#">info@untitled.tld</a></p>
-						</section>
-						<section>
-							<h3>Social</h3>
-							<ul class="icons alt">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-							</ul>
-						</section>
-					</section>
-				</footer>
-
 			<!-- Copyright -->
 				<div id="copyright">
-					<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+					<ul><li>&copy; Ayushi Mohanty<li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 				</div>
 
 		</div>
