--- a/elements.html
+++ b/elements.html
@@ -25,8 +25,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="generic.html">This is Ayushi</a></li>
-							<li><a href="index.html">Experience & Advocacy</a></li>
+							<li><a href="index.html">This is Ayushi</a></li>
+							<li><a href="generic.html">Research</a></li>
+							<li><a href="generic2.html">Service</a></li>
+							
 							<li class="active"><a href="elements.html">Honors</a></li>
 						</ul>
 						<ul class="icons">
