--- a/generic.html
+++ b/generic.html
@@ -26,7 +26,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">This is Ayushi</a></li>
-							<li class="active"><a href="generic.html">Experience & Advocacy</a></li>
+							<li class="active"><a href="generic.html">Research</a></li>
+							<li><a href="generic2.html">Service & Advocacy</a></li>
 							<li><a href="elements.html">Honors</a></li>
 						</ul>
 						<ul class="icons">
