--- a/index.html
+++ b/index.html
@@ -15,29 +15,17 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
-
-				<!-- Intro -->
-					<div id="intro">
-						<h1>This is<br />
-							Ayushi Mohanty</h1>
-						<p>An <strong>avid bioscience researcher</strong> and <br />
-							<strong>computer science enthusiast</strong>.</p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
-
-				<!-- Header -->
-					<header id="header">
-						<a href="generic.html" class="logo">Ayushi Mohanty</a>
-					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">This is Ayushi</a></li>
-							<li><a href="generic.html">Experience & Advocacy</a></li>
+							<li><a href="generic.html">Research</a></li>
+							<li><a href="generic2.html">Project Unbiased</a></li>
+							<li><a href="generic3.html">Girl's World</a></li>
+							<li><a href="generic4.html">Buzz Magazine</a></li>
+							<li><a href="generic4.html">MAθ x NEHS</a></li>
+							<li><a href="generic6.html">Biology Olympiad</a></li>
 							<li><a href="elements.html">Honors</a></li>
 						</ul>
 						<ul class="icons">
