--- a/generic2.html
+++ b/generic2.html
@@ -18,16 +18,18 @@
 			<div id="wrapper">
 
 				<!-- Header -->
+				<!-- Header -->
+					<!-- Nav -->
 					<header id="header">
 						<a href="index.html" class="logo">Ayushi Mohanty</a>
 					</header>
-
+	
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">This is Ayushi</a></li>
-							<li><a href="generic.html">Research</a></li>
-							<li class="active"><a href="generic2.html">Leadership & Service</a></li>
+							<li class="active"><a href="generic.html">Research</a></li>
+							<!--<li><a href="generic2.html">Service & Advocacy</a></li>-->
 							<li><a href="elements.html">Honors</a></li>
 						</ul>
 						<ul class="icons">
@@ -37,6 +39,7 @@
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
+	
 
 				<!-- Main -->
 				<div id="main">
