--- a/elements.html
+++ b/elements.html
@@ -18,26 +18,28 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">Ayushi Mohanty</a>
-					</header>
+					<!-- Header -->
+					<!-- Nav -->
+				<header id="header">
+					<a href="index.html" class="logo">Ayushi Mohanty</a>
+				</header>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li><a href="index.html">This is Ayushi</a></li>
-							<li><a href="generic.html">Research</a></li>
-							<li><a href="generic2.html">Service</a></li>
-							
-							<li class="active"><a href="elements.html">Honors</a></li>
-						</ul>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
-					</nav>
+			<!-- Nav -->
+				<nav id="nav">
+					<ul class="links">
+						<li><a href="index.html">This is Ayushi</a></li>
+						<li><a href="generic.html">Research</a></li>
+						<!--<li><a href="generic2.html">Service & Advocacy</a></li>-->
+						<li class="active"><a href="elements.html">Honors</a></li>
+					</ul>
+					<ul class="icons">
+						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					</ul>
+				</nav>
+
 
 				<!-- Main -->
 					<div id="main">
