--- a/index.html
+++ b/index.html
@@ -17,24 +17,25 @@
 		<!-- Wrapper -->
 
 				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">This is Ayushi</a></li>
-							<li><a href="generic.html">Research</a></li>
-							<li><a href="generic2.html">Project Unbiased</a></li>
-							<li><a href="generic3.html">Girl's World</a></li>
-							<li><a href="generic4.html">Buzz Magazine</a></li>
-							<li><a href="generic4.html">MAθ x NEHS</a></li>
-							<li><a href="generic6.html">Biology Olympiad</a></li>
-							<li><a href="elements.html">Honors</a></li>
-						</ul>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
-					</nav>
+				<header id="header">
+					<a href="index.html" class="logo">Ayushi Mohanty</a>
+				</header>
+
+			<!-- Nav -->
+				<nav id="nav">
+					<ul class="links">
+						<li class="active"><a href="index.html">This is Ayushi</a></li>
+						<li><a href="generic.html">Research</a></li>
+						<!--<li><a href="generic2.html">Service & Advocacy</a></li>-->
+						<li><a href="elements.html">Honors</a></li>
+					</ul>
+					<ul class="icons">
+						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					</ul>
+				</nav>
 
 				<!-- Main -->
 				<div id="main">
